--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "bugs": {
     "url": "https://github.com/MatthewSH/genius-logger/issues"
   },
+  "engines": {
+      "node": ">= 0.10"
+  },
   "files": [
     "lib/",
     "examples/",
