--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
   "engines": {
       "node": ">= 0.10"
   },
+  "keywords": [
+      "logging",
+      "console",
+      "logger",
+      "genius",
+      "log"
+  ],
   "files": [
     "lib/",
     "examples/",
